    . Add 2-arg test for ->synchronize()
    . Make ->set_visible actually use ->field()
      so it can also set select fields?!
    . Make ->set_visible also support select+option inputs

0.62 to be released
    . Add "document" option to ->content() to optionally specify the
      document object of which the content is desired.
    . Add more documentation for the ->content() method.
0.61 20120312
    . Fix code errors in WWW::Mechanize::Firefox::Cookbook
    . Allow to create a WWW::Mechanize::Firefox object if you already have
      an existing Firefox tab object.

0.60 20120302
    . Fix test failing when Image::Info was unavailable
    ! Fix scaling bug in ->element_as_png()

0.59 20120211
    + Report Javascript errors from the perspective of the caller
      instead of a location in WWW::Mechanize::Firefox
    ! ->wait_until_invisible() requeries selectors now instead
      of only querying them once.
    + Add target size options when converting HTML to PNG
    + WWW::Mechanize::Firefox is currently tested against the following versions
        - 3.0.19
        - 3.5.19
        - 3.6.19
        - 5.0.1
        - 6.0.1
        - 7.0.1
        - 8.0
        - 9.0
        - 10.0

0.58 20111128
    ! Fix cookie handling which was weirdly broken yet the tests passed.
      Session cookies now get returned
      Thanks to blakew for pointing that out

0.57 20111102
    . Make relative queries work for ->selector()
      with "node => $foo"
      Reported by Rolf Langsdorf

0.56 20111031
    . Make "frames => 0" work in constructor (+test)

0.55 20110728
    . Re-release of 0.54, this time including t/helper.pm for the tests

0.54 20110726
    + Bugfix: Tabs on FF4+ now only get closed once, preventing FF lockups
    + Bugfix: ->set_visible now also finds input fields without "type" attribute
    . ->set_visible() now also has tests
    
    + WWW::Mechanize::Firefox is currently tested against the following versions
        - 3.0.19
        - 3.5.19